# thingblock-link

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
arduino-cli-binaries/: README.md
assets/: status.html
brand/: DESIGN.md
proto/: README.md
src/: bridge.rs  daemon.rs  error.rs  grpc.rs  lib.rs  main.rs  resource.rs  tray.rs  utils.rs  window.rs  ws.rs
src/grpc/: board.rs  compile.rs  monitor.rs  upload.rs
src/utils/: tempdir.rs
src/ws/: batch.rs  protocol.rs  server.rs  session.rs
tests/: batch.rs  board_list.rs  compile.rs  connect.rs  daemon.rs  monitor.rs  protocol.rs  resource.rs  resource_serve.rs  upload.rs  window.rs  ws.rs
