[package]
name = "thingblock-link"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-prost-build = "0.14"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.35"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.24"
